*SVN*

* Added ActionController.filter_parameter_logging that makes it easy to remove passwords, credit card numbers, and other sensitive information from being logged when a request is handled #1897 [jeremye@bsa.ca.gov]


*1.12.1* (April 6th, 2005)

* Fixed that template extensions would be cached development mode #4624 [Stefan Kaes]

* Update to Prototype 1.5.0_rc0 [Sam Stephenson]

* Honor skipping filters conditionally for only certain actions even when the parent class sets that filter to conditionally be executed only for the same actions. #4522 [Marcel Molina Jr.]

* Delegate xml_http_request in integration tests to the session instance. [Jamis Buck]

* Update the diagnostics template skip the useless '<controller not set>' text. [Nicholas Seckar]

* CHANGED DEFAULT: Don't parse YAML input by default, but keep it available as an easy option [DHH]

* Add additional autocompleter options [aballai, Thomas Fuchs]

* Fixed fragment caching of binary data on Windows #4493 [bellis@deepthought.org]

* Applied Prototype $() performance patches (#4465, #4477) and updated script.aculo.us [Sam Stephenson, Thomas Fuchs]

* Added automated timestamping to AssetTagHelper methods for stylesheets, javascripts, and images when Action Controller is run under Rails [DHH]. Example:

    image_tag("rails.png") # => '<img alt="Rails" src="/images/rails.png?1143664135" />'
  
  ...to avoid frequent stats (not a problem for most people), you can set RAILS_ASSET_ID in the ENV to avoid stats:

    ENV["RAILS_ASSET_ID"] = "2345"
    image_tag("rails.png") # => '<img alt="Rails" src="/images/rails.png?2345" />'

  This can be used by deployment managers to set the asset id by application revision


*1.12.0* (March 27th, 2005)

* Add documentation for respond_to. [Jamis Buck]

* Fixed require of bluecloth and redcloth when gems haven't been loaded #4446 [murphy@cYcnus.de]

* Update to Prototype 1.5.0_pre1 [Sam Stephenson]
